2012-06-12  Murray Cumming  <murrayc@murrayc.com>

	Application: run(): Do not show the window until activation.

	* gtk/src/application.[hg|ccg]: run(window): Only show the window in 
	an activate signal handler, to fix a crash caused by the application not
	being registered when the GtkApplicationWindow tries to realize itself.

3.5.4 (unstable):

2012-06-12  Murray Cumming  <murrayc@murrayc.com>

	Entry: Undeprecate the activate signal.

	* gtk/src/entry.hg: Remove the deprecation documentation,
	because it is now OK again to use this signal. See this GTK+ commit:
	http://git.gnome.org/browse/gtk+/commit/?id=4a25bac0e7685000fff90a211db6ac60f6b74ab1

2012-05-29  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	StyleContext: Deprecate some functions and add others.

	* gtk/src/stylecontext.hg: Deprecate functions that have been deprecated in
	gtk+. Add render_icon() and render_insertion_cursor(). Add an overload of
	render_layout() that takes a const Glib::RefPtr<Pango::Layout>& instead of
	a PangoLayout*.
	* gtk/src/widget.[hg|ccg]: Deprecate draw_insertion_cursor(). Bug #675632.

2012-05-28  Mark Vender <markv743@yahoo.co.uk>

	Widget: Document get_style_property_value() and get_style_property()

	* widget.hg: Add documentation for get_style_property() and
	get_style_property_value(). Emphasize that get_style_property() is 
	preferable, as it doesn't use GValue directly.
    
	Bug #673303.

2012-05-28  Mark Vender <markv743@yahoo.co.uk>

	StyleContext: Wrap gtk_style_context_get_style_property() and friends
    
	* gtk/src/stylecontext.hg: Add get_style_property() and
	get_style_property_value().
    
	Bug #674746.

2012-05-28  Murray Cumming  <murrayc@murrayc.com>

	Container: Slight improvements to the vfunc documentation.

	* gtk/src/container.hg:

2012-05-28  Mark Vender <markv743@yahoo.co.uk>

 	Container: Document several rarely used virtual functions
    
	* gtk/src/container.hg: Add documentation for the following functions: