@@ -1,3 +1,15 @@
+2012-06-14  Murray Cumming  <murrayc@murrayc.com>
+
+	gen_scripts: Do not require a change to the PATH environment variable.
+
+	* tools/gen_scripts/gdk_generate_docs.sh:
+	* tools/gen_scripts/gdk_generate_enums.sh:
+	* tools/gen_scripts/gdk_generate_methods.sh:
+	* tools/gen_scripts/gtk_generate_docs.sh:
+	* tools/gen_scripts/gtk_generate_enums.sh:
+	* tools/gen_scripts/gtk_generate_methods.sh: Remove the need to change
+	the PATH as I did in the glibmm gen_scripts.
+
 2012-06-12  Murray Cumming  <murrayc@murrayc.com>
 
 	Application: run(): Do not show the window until activation.
